Make like button smaller and static on page. Fixes #246

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -799,15 +799,16 @@ body.product .product-image, body.look #content
     position: absolute
     top: 0px
     right: 0px
+    font-size: smaller
     button
       margin: 0
       border: none
-      background= "transparent" image_url("like-large.png") "no-repeat" "scroll" "center" "center"
+      background= "transparent" image_url("like-medium.png") "no-repeat" "scroll" "center" "center"
       color= !like_color
       text-transform: uppercase
-      padding-top: 20px
-      height: 100px
-      width: 89px
+      padding-top: 18px
+      height: 67px
+      width: 60px
       cursor: pointer
       text-align: center
 
